# giskard_core

./: CMakeLists.txt  package.xml
include/giskard_core/: expression_arrays.hpp  expressiontree.hpp  giskard_core.hpp  qp_controller_spec_generator.hpp  qp_problem_builder.hpp  robot.hpp  scope.hpp  slerp.hpp  specifications.hpp
test/giskard_core/: robot.cpp
