<?xml version="1.0"?>
<package format="3">
  <name>giskard_core</name>
  <version>0.2.0</version>
  <description>
    This package provides the core C++ library of giskard, a constraint and
    optimization-based framework for robot motion control.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>GPLv2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>yaml-cpp</depend>
  <depend>expressiongraph</depend>
  <depend>qpoases</depend>
  <depend>kdl_parser</depend>
  <test_depend>kdl_parser</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
